--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,12 @@
     <string name="app_name">GocsdkFinal</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="warning_connect">请您先连接设备</string>
+    <string name="device_phone">手机端</string>
+    <string name="device_car">车机端</string>
+    <string name="search_done">搜索完成</string>
+    <string name="device_connected">已有设备连接</string>
+    <string name="warning_input_number">请输入电话号码</string>
+    <string name="unkown_number">未知号码</string>
 
 </resources>
